# ponte

./: .python-version  Dockerfile  LICENSE  README.md  config.py  deployment.json  main.py  models.py  pyproject.toml  requirements.txt  test.json
.github/workflows/: docs.yaml  push-to-ghcr.yaml  pytest.yaml
api/: deployments.py  events.py  jobs.py  service.py
api/models/: gh_pr.py
api/plugins/: __init__.py  demo.py
api/plugins/azure/: service.py  uow.py  vm.py
collections/: bruno.json  event.bru
docs/: index.md  reflexion-und-fazit.md
docs/codeaufbau/: konzepte.md  oop-und-funktionale-programmierung.md  snippets.md
docs/komponenten/: abhaengigkeiten.md  abhängigkeiten.md  entwicklungsworkflow.md  paketierung-und-containerisierung.md
docs/umsetzung/: contrinuous-integration.md.md  nutzung.md  testing.md  tools.md
modules/azure/: service.py  uow.py
modules/github/: request.py
modules/github/models/: webhook.py
providers/: base.py
providers/vsphere/: models.py  repository.py
routes/: event.py
src/api/: webhook.py
src/plugins/: common.py  vsphere.py
src/plugins/demo/: model.py
src/plugins/vsphere/: client.py  model.py
src/providers/github/: pr_models.py
src/store/: definitions.py  redis.py
store/: definitions.py  redis.py
tests/e2e/: bruno.json  github.bru
tests/unit/: test_repository.py
